2023-05-05 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Improve event page and add missing Report event, references #279

2023-05-02 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Introduce webhook in new Report step, resolves #279
	* Make it possible to run steps despite process being aborted, resolves #284

2023-04-24 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Introduce reaction, resolves #278

2023-04-14 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Introduce processed configuration, resolves #281

2023-04-10 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Drop support for PHP 7.2 and 7.3, clean up code accordingly, resolves #280

2023-04-08 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Compatiblity with TYPO3 12 and PHP 8.1, resolves #269
	* Update DataTables to latest version (1.13.4), resolves #268
	* Remove deprecated code, resolves #270

2023-02-28 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Adapt backend modules to new backend templating, resolves #267

2023-02-26 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 6.3.2

2023-02-25 Mathias Brodala (Pagemachine AG)  <mbrodala@pagemachine.de>

	* Avoid undefined array key warning with additionalFields
	* Scheduler task fails only on errors, not warnings, resolves #272

2023-02-15 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fix various PHP 8+ compatibility issues
	* Release version 6.3.1

2023-01-20 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 6.3.0

2023-01-18 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Add possibility to override storage pid at runtime, resolves #265
	* Document the Scheduler task, resolves #266

2023-01-10 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure strict typing for PHP time limit, resolves #264

2023-01-06 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Adapt to new connector services registry, resolves #263

2023-01-05 Francois Suter (Idéative)  <typo3@ideative.ch>
