@@ -17,10 +17,6 @@ declare(strict_types=1);
 
 namespace Cobweb\ExternalImport\Utility;
 
-use Cobweb\Svconnector\Exception\ConnectorRuntimeException;
-use Cobweb\Svconnector\Exception\UnknownServiceException;
-use Cobweb\Svconnector\Registry\ConnectorRegistry;
-use Cobweb\Svconnector\Service\ConnectorBase;
 use TYPO3\CMS\Core\Information\Typo3Version;
 use TYPO3\CMS\Core\Utility\GeneralUtility;
 
@@ -51,56 +47,5 @@ class CompatibilityUtility
     {
         $typo3Version = GeneralUtility::makeInstance(Typo3Version::class);
         return $typo3Version->getMajorVersion() === 12;
-    }
-
-    /**
-     * Returns the requested connector service, depending on the available architecture
-     * (old TYPO3 services or new connector registry).
-     *
-     * @param string $key
-     * @return ConnectorBase
-     * @throws UnknownServiceException|ConnectorRuntimeException
-     */
-    public static function getConnectorService(string $key): ConnectorBase
-    {
-        if (class_exists(ConnectorRegistry::class)) {
-            $registry = GeneralUtility::makeInstance(ConnectorRegistry::class);
-            $service = $registry->getServiceForType($key);
-            if (!$service->isAvailable()) {
-                throw new ConnectorRuntimeException(
-                    sprintf(
-                        'The requested connector service (%s) is not available.',
-                        $key
-                    ),
-                    1673026928
-                );
-            }
-        } else {
-            $service = GeneralUtility::makeInstanceService(
-                'connector',
-                $key
-            );
-            if (!$service) {
-                throw new UnknownServiceException(
-                    sprintf(
-                        'No connector service found for type %s',
-                        $key
-                    ),
-                    1673026336
-                );
-            }
-
-            if (is_array($service)) {
-                throw new ConnectorRuntimeException(
-                    sprintf(
-                        'The connector service could not be initialized. Reason %s (code: %s).',
-                        $service['msg'],
-                        $service['nr']
-                    ),
-                    1673026771
-                );
-            }
-        }
-        return $service;
     }
 }
