@@ -26,6 +26,11 @@ Upgrading and what's new
 Upgrade to 7.0.0
 """"""""""""""""
 
+Support for old-style Connector services was droppped (i.e. connectors registered
+as TYPO3 Core Services). If you use custom connector services, make sure to update
+them (see the :ref:`update instructions <svconnector:installation-updating-500>`
+provided by extension "svconnector").
+
 When editing Scheduler tasks in the External Import backend module, it is no longer
 possible to define a start date (this tiny feature was a lot of hassle to maintain
 across TYPO3 versions).
