@@ -26,7 +26,7 @@
 		"php": "^7.4 || ^8.0 || ^8.1",
 		"typo3/cms-core": "^11.5 || ^12.4",
 		"typo3/cms-scheduler": "^11.5 || ^12.4",
-		"cobweb/svconnector": "^4.0 || ^5.0"
+		"cobweb/svconnector": "^5.0"
 	},
 	"extra": {
 		"typo3/cms": {
